--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ hs_err_pid*
 replay_pid*
 /DesignPatterns/build/
 /DesignPatterns/FA23 Lab Midterm observer/observer/nbproject/private/
+/DesignPatterns/FA23 Lab Midterm observer/observer/build/
