--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ replay_pid*
 /DesignPatterns/FA23 Lab Midterm observer/observer/nbproject/private/
 /DesignPatterns/FA23 Lab Midterm observer/observer/build/
 /DesignPatterns/nbproject/private/
+/DesignPatterns/dist/
